cmake_minimum_required(VERSION 2.8)

add_definitions(" -Wall -ansi -g")

ADD_EXECUTABLE(24 24.cc)
ADD_EXECUTABLE(stl_test stl_test.cc)
ADD_EXECUTABLE(power power.cc)
ADD_EXECUTABLE(common_test common_test.cc)
ADD_EXECUTABLE(steps steps.cc)
ADD_EXECUTABLE(itoa itoa.cc)
ADD_EXECUTABLE(spam_post spam_post.cc)
ADD_EXECUTABLE(joseph joseph.cc)
ADD_EXECUTABLE(regexp regexp.cc)
ADD_EXECUTABLE(bst2list bst2list.cc)
ADD_EXECUTABLE(list2bst list2bst.cc)
